Fix: horizontal scroll in intro

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,5 @@
 .intro {
   max-width: 690px;
-  min-width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
